# python-project-copy

./: .coverage  .gitignore  Makefile  Procfile  README.md  Readme.md  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: workflows_make_lint.yml  workflows_test_coverage.yml  workflows_tests.yml
task_manager/: admin.py  form.py  mixins.py  models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/app_labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/app_statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/app_tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/app_users/: admin.py  apps.py  forms.py  mixins_user.py  models.py  tests.py  urls.py  views.py
task_manager/fixtures/: application_users.yaml  labels.yaml  statuses.yaml  tasks.yaml
task_manager/migrations/: 0001_initial.py  0002_delete_my_class.py  0003_statuses.py  0004_labels_tasklabels_tasks_tasklabels_task.py  0005_alter_tasks_status_delete_statuses.py  0006_remove_tasklabels_label_remove_tasklabels_task_and_more.py  0007_delete_employee.py
task_manager/templates/: footer.html  home.html  index.html  labels.html  labels_create.html  labels_delete.html  labels_update.html  login.html  site_header.html  statuses.html  statuses_create.html  statuses_delete.html  statuses_update.html  task_manager_detail.html  tasks.html  tasks_create.html  tasks_delete.html  tasks_update.html  tasks_view.html  users.html  users_create.html  (+2 more)
(+30 files in other folders)
