[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey <kvazar941@gmail.com>"]
repository = "github.com/kvazar941/python-project-lvl4"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
wemake-python-styleguide = "^0.16.0"
flake8 ="^4.0.1"
coverage = "^6.4.1"
pytest-cov = "3.0.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.0"
bootstrap4 = "0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
