[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey <kvazar941@gmail.com>"]
repository = "github.com/kvazar941/python-project-lvl4"
packages = [
    {include = "task_manager"},
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
rollbar = "^0.16.3"
whitenoise = "^6.2.0"
django-bootstrap4 = "^22.0"
gunicorn = "^20.1.0"
django-filter = "^22.1"
django-heroku = "^0.3.1"
pycodestyle = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
wemake-python-styleguide = "^0.16.0"
flake8 ="^3.7.0"
flake8-bandit = "2.1.2"
bandit = "1.7.2"
coverage = "^6.4.1"
pytest-cov = "3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
